fix word wrap with line numbers

--- a/tests/editor/editorEntry.css
+++ b/tests/editor/editorEntry.css
@@ -4,6 +4,7 @@
   cursor: text;
   position: absolute;
   inset: 0;
+  height: 300px;
   color: white;
 }
 
